--- a/index/templates/publish.html
+++ b/index/templates/publish.html
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block form %}
-    <form action="/publish/" method="post" enctype="multipart/form-data" name="pub" id="testForm">
+    <form action="{% url 'publishPage' %}" method="post" enctype="multipart/form-data" name="pub" id="testForm">
         {% csrf_token %}
         <div id="pblog">
         <table class="content">
