--- a/index/templates/register.html
+++ b/index/templates/register.html
@@ -2,19 +2,25 @@
 {% load static %}
 
 {% block title %}
-    注册
+    Register
+{% endblock %}
+{%block head %}
+    <script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
 
 {% block menu %}
 {% endblock %}
 
 {% block form %}
-    <form action="/register/" method="post">
+    <form action="{% url 'register' %}" method="post" id="submit">
         {% csrf_token %}
         {{form.as_p}}
+        <p class="tip">
+            {{ err }}
+        </p>
         <p>
             <button type="submit" id="sbm">注册</button>
-            <a href="/login/" class="btn">登录</a>
+            <a href="{% url 'login' %}" class="btn">登录</a>
         </p>
     </form>
 {% endblock %}
